fix: update docker configurations for proper routing

--- a/docker-compose.easypanel.yml
+++ b/docker-compose.easypanel.yml
@@ -1,43 +1,34 @@
 services:
   app:
-    build: .
-    restart: always
+    container_name: coffee-rental
+    restart: unless-stopped
+    build:
+      context: .
+      dockerfile: Dockerfile
     environment:
       - NODE_ENV=production
       - MONGODB_URI=mongodb://mongodb:27017/coffee-rental
-      - OPENAI_API_KEY=${OPENAI_API_KEY}
-      - OPENAI_MODEL=${OPENAI_MODEL}
-      - EVOLUTION_API_URL=${EVOLUTION_API_URL}
-      - EVOLUTION_API_KEY=${EVOLUTION_API_KEY}
-      - EVOLUTION_INSTANCE=${EVOLUTION_INSTANCE}
-    ports:
-      - "3001:3000"
+      - PORT=3000
     depends_on:
       - mongodb
     networks:
-      - coffee-network
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
+      - app-network
+    expose:
+      - 3000
 
   mongodb:
+    container_name: coffee-rental-mongodb
     image: mongo:latest
-    restart: always
     volumes:
       - mongodb_data:/data/db
     networks:
-      - coffee-network
-    logging:
-      driver: "json-file"
-      options:
-        max-size: "10m"
-        max-file: "3"
+      - app-network
+    restart: unless-stopped
 
 networks:
-  coffee-network:
+  app-network:
     driver: bridge
 
 volumes:
   mongodb_data:
+    driver: local
