--- a/docker-compose.easypanel.yml
+++ b/docker-compose.easypanel.yml
@@ -1,7 +1,19 @@
 services:
-  app:
-    container_name: coffee-rental
+  nginx:
+    container_name: coffee-rental-nginx
+    image: nginx:alpine
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - app
+    networks:
+      - app-network
+    expose:
+      - 80
     restart: unless-stopped
+
+  app:
+    container_name: coffee-rental-app
     build:
       context: .
       dockerfile: Dockerfile
@@ -15,6 +27,7 @@ services:
       - app-network
     expose:
       - 3000
+    restart: unless-stopped
 
   mongodb:
     container_name: coffee-rental-mongodb
