--- a/docker-compose.easypanel.yml
+++ b/docker-compose.easypanel.yml
@@ -3,7 +3,10 @@ services:
     container_name: coffee-rental-nginx
     image: nginx:alpine
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+      - type: bind
+        source: ./nginx.conf
+        target: /etc/nginx/conf.d/default.conf
+        read_only: true
     depends_on:
       - app
     networks:
