--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -7,7 +7,7 @@ server {
     }
 
     location /api/ {
-        proxy_pass http://app:3000/;
+        proxy_pass http://app:3000/api/;  # Keep the /api prefix
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
