fix: simplify docker configuration to reduce memory usage

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,12 +11,7 @@ services:
     expose:
       - 80
     restart: unless-stopped
-    deploy:
-      resources:
-        limits:
-          memory: 128M
-        reservations:
-          memory: 64M
+    mem_limit: 64m
 
   app:
     container_name: coffee-rental-app
@@ -34,12 +29,7 @@ services:
     expose:
       - 3000
     restart: unless-stopped
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-        reservations:
-          memory: 256M
+    mem_limit: 256m
 
   mongodb:
     container_name: coffee-rental-mongodb
@@ -49,12 +39,7 @@ services:
     networks:
       - app-network
     restart: unless-stopped
-    deploy:
-      resources:
-        limits:
-          memory: 512M
-        reservations:
-          memory: 256M
+    mem_limit: 256m
     command: ["--wiredTigerCacheSizeGB", "0.25"]
 
 networks:
