--- a/package.json
+++ b/package.json
@@ -13,14 +13,16 @@
     "docker:restart": "docker-compose restart"
   },
   "dependencies": {
-    "axios": "^1.6.2",
-    "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "mongoose": "^7.6.3",
-    "openai": "^4.0.0"
+    "axios": "1.6.2",
+    "cors": "2.8.5",
+    "dotenv": "16.3.1",
+    "express": "4.18.2",
+    "mongoose": "7.6.3"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "3.0.1"
+  },
+  "engines": {
+    "node": ">=18.0.0"
   }
 }
