--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,13 +1,38 @@
+# Worker connections
+events {
+    worker_connections 256;
+}
+
+# HTTP server configuration
 server {
     listen 80;
     server_name saas-souza.9uc1cu.easypanel.host;
+
+    # Compression
+    gzip on;
+    gzip_types text/plain application/json;
+    gzip_min_length 1000;
+
+    # Client body size
+    client_max_body_size 1M;
+
+    # Timeouts
+    client_body_timeout 12;
+    client_header_timeout 12;
+    keepalive_timeout 15;
+    send_timeout 10;
+
+    # Buffer size
+    client_body_buffer_size 16k;
+    client_header_buffer_size 1k;
+    large_client_header_buffers 2 1k;
 
     location / {
         return 404;
     }
 
     location /api/ {
-        proxy_pass http://app:3000/api/;  # Keep the /api prefix
+        proxy_pass http://app:3000/api/;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -17,7 +42,12 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_cache_bypass $http_upgrade;
         
-        # Add CORS headers
+        # Proxy timeouts
+        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
+
+        # CORS headers
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
