fix: update nginx config with dedicated health check endpoint

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,9 +1,3 @@
-# Worker connections
-events {
-    worker_connections 256;
-}
-
-# HTTP server configuration
 server {
     listen 80;
     server_name saas-souza.9uc1cu.easypanel.host;
@@ -26,6 +20,14 @@ server {
     client_body_buffer_size 16k;
     client_header_buffer_size 1k;
     large_client_header_buffers 2 1k;
+
+    # Health check endpoint
+    location /api/health {
+        proxy_pass http://app:3000/api/health;
+        proxy_http_version 1.1;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
 
     location / {
         return 404;
