--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -21,20 +21,8 @@ server {
     client_header_buffer_size 1k;
     large_client_header_buffers 2 1k;
 
-    # Health check endpoint
-    location /api/health {
-        proxy_pass http://app:3000/api/health;
-        proxy_http_version 1.1;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
-
-    location / {
-        return 404;
-    }
-
-    location /api/ {
-        proxy_pass http://app:3000/api/;
+    location /api {
+        proxy_pass http://app:3000/api;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -65,5 +53,9 @@ server {
             add_header 'Content-Length' 0;
             return 204;
         }
+    }
+
+    location / {
+        return 404;
     }
 }
