--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,3 +1,7 @@
+# Error log configuration
+error_log /var/log/nginx/error.log debug;
+access_log /var/log/nginx/access.log;
+
 server {
     listen 80;
     server_name saas-souza.9uc1cu.easypanel.host;
@@ -21,8 +25,17 @@ server {
     client_header_buffer_size 1k;
     large_client_header_buffers 2 1k;
 
+    # Debug logging for troubleshooting
+    error_log /var/log/nginx/host.error.log debug;
+    access_log /var/log/nginx/host.access.log;
+
     location /api {
-        proxy_pass http://app:3000/api;
+        # Debug logging
+        error_log /var/log/nginx/api.error.log debug;
+        access_log /var/log/nginx/api.access.log;
+
+        # Proxy settings
+        proxy_pass http://coffee-rental-app:3000/api;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
