--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -35,7 +35,7 @@ server {
         access_log /var/log/nginx/api.access.log;
 
         # Proxy settings
-        proxy_pass http://coffee-rental-app:3000/api;
+        proxy_pass http://app:3000/api;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -66,6 +66,14 @@ server {
             add_header 'Content-Length' 0;
             return 204;
         }
+
+        # Error handling
+        proxy_intercept_errors on;
+        error_page 502 = @handle_502;
+    }
+
+    location @handle_502 {
+        return 502 '{"error": "Bad Gateway", "message": "Application server is not responding"}';
     }
 
     location / {
