fix: improve nginx configuration with upstream and better proxy settings

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -2,6 +2,16 @@
 error_log /var/log/nginx/error.log debug;
 access_log /var/log/nginx/access.log;
 
+map $http_upgrade $connection_upgrade {
+    default upgrade;
+    '' close;
+}
+
+upstream backend {
+    server app:3000;
+    keepalive 32;
+}
+
 server {
     listen 80;
     server_name saas-souza.9uc1cu.easypanel.host;
@@ -35,14 +45,16 @@ server {
         access_log /var/log/nginx/api.access.log;
 
         # Proxy settings
-        proxy_pass http://app:3000/api;
+        proxy_pass http://backend;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
+        proxy_set_header Connection $connection_upgrade;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Port $server_port;
         proxy_cache_bypass $http_upgrade;
         
         # Proxy timeouts
@@ -73,6 +85,7 @@ server {
     }
 
     location @handle_502 {
+        default_type application/json;
         return 502 '{"error": "Bad Gateway", "message": "Application server is not responding"}';
     }
 
