--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,6 @@ services:
     volumes:
       - ./nginx:/etc/nginx/conf.d
       - nginx_logs:/var/log/nginx
-      - /etc/letsencrypt:/etc/letsencrypt:ro
     depends_on:
       app:
         condition: service_healthy
@@ -13,7 +12,6 @@ services:
       - app-network
     ports:
       - "80:80"
-      - "443:443"
     restart: unless-stopped
     mem_limit: 64m
     healthcheck:
@@ -21,9 +19,11 @@ services:
       interval: 10s
       timeout: 5s
       retries: 3
-    environment:
-      - NGINX_HOST=saas-souza.9uc1cu.easypanel.host
-      - NGINX_PORT=80
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   app:
     container_name: coffee-rental-app
@@ -52,6 +52,11 @@ services:
       timeout: 5s
       retries: 3
       start_period: 15s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
   mongodb:
     container_name: coffee-rental-mongodb
@@ -71,6 +76,11 @@ services:
       timeout: 5s
       retries: 3
       start_period: 15s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
 
 networks:
   app-network:
