--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -12,30 +12,9 @@ upstream backend {
     keepalive 32;
 }
 
-# HTTP redirect to HTTPS
 server {
     listen 80;
     server_name saas-souza.9uc1cu.easypanel.host;
-    return 301 https://$server_name$request_uri;
-}
-
-# HTTPS server
-server {
-    listen 443 ssl http2;
-    server_name saas-souza.9uc1cu.easypanel.host;
-
-    # SSL configuration
-    ssl_protocols TLSv1.2 TLSv1.3;
-    ssl_prefer_server_ciphers off;
-    ssl_ciphers ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:DHE-RSA-AES128-GCM-SHA256:DHE-RSA-AES256-GCM-SHA384;
-    
-    # SSL session configuration
-    ssl_session_timeout 1d;
-    ssl_session_cache shared:SSL:50m;
-    ssl_session_tickets off;
-
-    # HSTS
-    add_header Strict-Transport-Security "max-age=63072000" always;
 
     # Compression
     gzip on;
@@ -58,12 +37,12 @@ server {
 
     # Debug logging for troubleshooting
     error_log /var/log/nginx/host.error.log debug;
-    access_log /var/log/nginx/host.access.log;
+    access_log /var/log/nginx/host.access.log combined buffer=512k flush=1m;
 
     location /api {
         # Debug logging
         error_log /var/log/nginx/api.error.log debug;
-        access_log /var/log/nginx/api.access.log;
+        access_log /var/log/nginx/api.access.log combined buffer=512k flush=1m;
 
         # Proxy settings
         proxy_pass http://backend;
@@ -82,6 +61,8 @@ server {
         proxy_connect_timeout 60s;
         proxy_send_timeout 60s;
         proxy_read_timeout 60s;
+        proxy_buffers 8 16k;
+        proxy_buffer_size 32k;
 
         # CORS headers
         add_header 'Access-Control-Allow-Origin' '*' always;
