fix: simplify nginx config to forward all requests to backend

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -13,8 +13,8 @@ upstream backend {
 }
 
 server {
-    listen 80;
-    server_name saas-souza.9uc1cu.easypanel.host;
+    listen 80 default_server;
+    server_name _;
 
     # Compression
     gzip on;
@@ -39,7 +39,7 @@ server {
     error_log /var/log/nginx/host.error.log debug;
     access_log /var/log/nginx/host.access.log combined buffer=512k flush=1m;
 
-    location /api {
+    location / {
         # Debug logging
         error_log /var/log/nginx/api.error.log debug;
         access_log /var/log/nginx/api.access.log combined buffer=512k flush=1m;
@@ -89,9 +89,5 @@ server {
     location @handle_502 {
         default_type application/json;
         return 502 '{"error": "Bad Gateway", "message": "Application server is not responding"}';
-    }
-
-    location / {
-        return 404;
     }
 }
