fix: add EasyPanel labels to docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,6 +29,10 @@ services:
       options:
         max-size: "10m"
         max-file: "3"
+    labels:
+      - easypanel.template=nodejs
+      - easypanel.proxy.port=3000
+      - easypanel.proxy.websocket=true
 
   mongodb:
     container_name: coffee-rental-mongodb
