--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,8 +9,8 @@ services:
       - MONGODB_URI=mongodb://mongodb:27017/coffee-rental
       - PORT=3000
       - HOST=0.0.0.0
-    expose:
-      - "3000"
+    ports:
+      - "3000:3000"
     depends_on:
       mongodb:
         condition: service_healthy
