--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
       - MONGODB_URI=mongodb://mongodb:27017/coffee-rental
       - PORT=3000
       - HOST=0.0.0.0
-    ports:
-      - "3001:3000"
+    expose:
+      - "3000"
     depends_on:
       - mongodb
     networks:
