--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "cors": "2.8.5",
     "dotenv": "16.3.1",
     "express": "4.18.2",
-    "mongoose": "7.6.3"
+    "mongoose": "7.6.3",
+    "openai": "^4.24.1"
   },
   "devDependencies": {
     "nodemon": "3.0.1"
