--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "16.3.1",
     "express": "4.18.2",
     "mongoose": "7.6.3",
+    "natural": "^8.0.1",
     "openai": "^4.24.1"
   },
   "devDependencies": {
